[gd_scene load_steps=7 format=3 uid="uid://nrfti3hkeyq4"]

[ext_resource type="PackedScene" uid="uid://d1ck5inf3bdcq" path="res://Scenes/Enemies/PlainEnemy.tscn" id="1_k4fs6"]
[ext_resource type="Script" uid="uid://biox0lsa6gbep" path="res://Scripts/Enemies/ShooterEnemy.gd" id="2_hxamy"]
[ext_resource type="Script" uid="uid://bmphh71yg4oct" path="res://Scripts/Components/ActiveWeapon.gd" id="2_ubhwd"]
[ext_resource type="Resource" uid="uid://dxgjejnnjd8a6" path="res://Resources/Weapons/Enemy/EnemyPistol.tres" id="3_hxamy"]
[ext_resource type="Script" uid="uid://b48ahap712nen" path="res://Scripts/Components/FireWeapon.gd" id="8_i5djr"]
[ext_resource type="Resource" uid="uid://uwm4msfw6u3w" path="res://Resources/MainEventBus.tres" id="10_vfbhq"]

[node name="ShooterEnemy" instance=ExtResource("1_k4fs6")]
script = ExtResource("2_hxamy")
can_shoot = true
weapon = ExtResource("3_hxamy")
shooting_duration_interval = Vector2(2, 3)
shooting_cooldown_interval = Vector2(5, 10)
invincible_time = 0.0
shape_area_percent = 0.1
fractures = 20
max_speed = 125.0
polygon_shape = 4
s_p_number = 12
s_a = 125.0
s_b = 160.0
min_m = 13.05
m = 22.0
min_n1 = 0.3
n1 = 0.3
min_n2 = 0.3
n2 = 0.3
min_n3 = 0.3
n3 = 0.3

[node name="ShotingMechanics" type="Node2D" parent="." index="0"]

[node name="ActiveWeaponComponent" type="Node2D" parent="ShotingMechanics" index="0"]
script = ExtResource("2_ubhwd")
metadata/_custom_type_script = "uid://bmphh71yg4oct"

[node name="FireWeapon" type="Node2D" parent="ShotingMechanics" index="1" node_paths=PackedStringArray("active_weapon_component")]
script = ExtResource("8_i5djr")
main_event_bus = ExtResource("10_vfbhq")
shake_camera_on_fire = false
active_weapon_component = NodePath("../ActiveWeaponComponent")
is_enemy_weapon = true
use_object_pool = true

[node name="FireCooldownTimer" type="Timer" parent="ShotingMechanics/FireWeapon" index="0"]
unique_name_in_owner = true

[node name="BulletFirePosition" type="Marker2D" parent="ShotingMechanics" index="2"]
unique_name_in_owner = true
position = Vector2(62, 0)

[node name="ShootEffectPosition" type="Marker2D" parent="ShotingMechanics" index="3"]
unique_name_in_owner = true
position = Vector2(55, 0)
